force-app/main/default/objects/pmdm__ServiceSession__c/fields/pmdm__OmittedContactIds__c.field-meta.xml
<CustomField>
    <fullName>pmdm__OmittedContactIds__c</fullName>
    <description>This field is used to track which contacts were omitted from the Attendance roster. This is a system field and shouldn&apos;t be manually altered.</description>
    <inlineHelpText>This field is used to track which contacts were omitted from the Attendance roster. This is a system field and shouldn&apos;t be manually altered.</inlineHelpText>
    <label>Omitted Contact Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>