force-app/main/default/objects/pmdm__ServiceSession__c/fields/pmdm__ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ServiceSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Schedule</label>
    <referenceTo>pmdm__ServiceSchedule__c</referenceTo>
    <relationshipLabel>Service Sessions</relationshipLabel>
    <relationshipName>ServiceSessions</relationshipName>
    <type>Lookup</type>
</CustomField>