force-app/main/default/objects/pmdm__ServiceSession__c/fields/pmdm__SessionEnd__c.field-meta.xml
<CustomField>
    <fullName>pmdm__SessionEnd__c</fullName>
    <label>Session End</label>
    <type>DateTime</type>
</CustomField>