force-app/main/default/objects/pmdm__ServiceSession__c/fields/pmdm__SessionStart__c.field-meta.xml
<CustomField>
    <fullName>pmdm__SessionStart__c</fullName>
    <label>Session Start</label>
    <type>DateTime</type>
</CustomField>